--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # This file is a placeholder for environment variables required to run this project.
-# Currently, there are no environment variables needed.
+
+# Spotify API Configuration
+SPOTIFY_CLIENT_ID=1b28503b835c4cd0a19941c5fda01c99
+SPOTIFY_CLIENT_SECRET=1008962b48534b938fbe100e42f6e3f8
+SPOTIFY_REFRESH_TOKEN=your_spotify_refresh_token
 
 # Example of what future variables might look like:
 # NEXT_PUBLIC_API_KEY=your_api_key_here
