--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^15.3.1",
     "@once-ui-system/core": "^1.4.27",
+    "@prisma/client": "^6.16.3",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "cookie": "^1.0.2",
@@ -20,10 +21,12 @@
     "lint-staged": "^16.1.5",
     "next": "^15.3.1",
     "next-mdx-remote": "^5.0.0",
+    "prisma": "^6.16.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
     "sass": "^1.86.3",
+    "sentiment": "^5.0.2",
     "spotify-web-api-node": "^5.0.2",
     "transliteration": "^2.3.5",
     "ws": "^8.18.3"
