--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^20.17.30",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/sentiment": "^5.0.4",
     "@types/spotify-web-api-node": "^5.0.11",
     "eslint": "^9.25.0",
     "typescript": "^5.8.3",
