--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL="postgresql://user:password@localhost:5432/mydb"
 ADMIN_PASSWORD="your_admin_password_here"
+GEMINI_API_KEY="your_gemini_api_key_here"
