--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 DATABASE_URL="postgresql://user:password@localhost:5432/mydb"
 ADMIN_PASSWORD="your_admin_password_here"
+
+# AI Chat Providers (Perplexity is primary, Gemini is fallback)
+PERPLEXITY_API_KEY="your_perplexity_api_key_here"
 GEMINI_API_KEY="your_gemini_api_key_here"
