--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^15.3.1",
     "@once-ui-system/core": "^1.4.27",
+    "@perplexity-ai/perplexity_ai": "^0.12.0",
     "@prisma/client": "^6.16.3",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
